Add pruebas basica al componente FormData

--- a/package.json
+++ b/package.json
@@ -44,19 +44,23 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.9",
     "@types/react-router-dom": "^5.1.8",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "cypress": "^8.0.0",
+    "enzyme": "^3.11.0",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript-prettier": "^4.2.0",
     "prettier": "^2.3.2",
+    "react-test-renderer": "^17.0.2",
     "typescript": "^4.3.5"
   },
-  "standart":{
-    "globals":[
-        "describe",
-        "it",
-        "cy"
+  "standart": {
+    "globals": [
+      "describe",
+      "it",
+      "cy"
     ]
   }
 }
