Add config para sonar[5]

--- a/sonar-proyect.properties
+++ b/sonar-proyect.properties
@@ -1,5 +1,5 @@
 # Información del proyecto
-sonar.projectKey=co.com.ceiba:ADN-admin-fundacion(deymer.hernandez)
+sonar.projectKey=co.com.ceiba:ADN-admin-fundacion.deymer.hernandez
 sonar.projectName=adn-fundacion
 sonar.projectVersion=1.0
 sonar.projectDescription=Admin fundacion
