--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@types/enzyme": "^3.10.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-test-renderer": "^17.0.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "cypress": "^8.0.0",
     "enzyme": "^3.11.0",
